// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GDatePicker/Title/GDatePickerTitle.js should render component and match snapshot 1`] = `
<div class="g-date-picker-title">
  <div class="g-picker__title__btn g-picker__title__btn--active g-date-picker-title__year">
    1234
  </div>
  <div class="g-picker__title__btn g-date-picker-title__date">
    <div name="picker-transition">
      2005-11-01
    </div>
  </div>
</div>
`;

exports[`GDatePicker/Title/GDatePickerTitle.js should render component when selecting year and match snapshot 1`] = `
<div class="g-date-picker-title">
  <div class="g-picker__title__btn g-picker__title__btn--active g-date-picker-title__year">
    1234
  </div>
  <div class="g-picker__title__btn g-date-picker-title__date">
    <div name="picker-transition">
      2005-11-01
    </div>
  </div>
</div>
`;

exports[`GDatePicker/Title/GDatePickerTitle.js should render disabled component and match snapshot 1`] = `
<div class="g-date-picker-title g-date-picker-title--disabled">
  <div class="g-picker__title__btn g-picker__title__btn--active g-date-picker-title__year">
    1234
  </div>
  <div class="g-picker__title__btn g-date-picker-title__date">
    <div name="picker-transition">
      2005-11-01
    </div>
  </div>
</div>
`;

exports[`GDatePicker/Title/GDatePickerTitle.js should render readonly component and match snapshot 1`] = `
<div class="g-date-picker-title">
  <div class="g-picker__title__btn g-picker__title__btn--readonly g-picker__title__btn--active g-date-picker-title__year">
    1234
  </div>
  <div class="g-picker__title__btn g-picker__title__btn--readonly g-date-picker-title__date">
    <div name="picker-transition">
      2005-11-01
    </div>
  </div>
</div>
`;
